# symmetry

./: CMakeLists.txt  main.cpp  rotation.cpp  rotation.h
GUI/: centerWidget.cpp  centerWidget.h  mainwindow.cpp  mainwindow.h
objekts/: PenState.cpp  PenState.h  drawTools.cpp  drawTools.h  line.cpp  line.h  pen.cpp  pen.h  state.h
